add missing welsh translations

--- a/nginx/html/custom_404_cym.html
+++ b/nginx/html/custom_404_cym.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>404 - Page not found</title>
+<title>404 - Methu canfod y dudalen</title>
 <style>
     /* Style for the alert box */
     .alert {
@@ -21,7 +21,7 @@
 </head>
 <body style="text-align: center;">
     <div class="alert alert-warning">
-        <p style="font-family: Arial;">The metadata entry you are looking for is no longer available. If you need assistance in finding metadata records, please contact <a style="color: #007485; font-weight: bold; text-decoration: none;" href='mailto:opendata@cyfoethnaturiolcymru.gov.uk' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a>.</p>
+        <p style="font-family: Arial;">Nid yw'r cofnod metadata rydych yn chwilio amdano ar gael bellach.  Os oes angen cymorth arnoch i ddod o hyd i gofnodion metadata, cysylltwch ag <a style="color: #007485; font-weight: bold; text-decoration: none;" href='mailto:opendata@cyfoethnaturiolcymru.gov.uk' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a>.</p>
     </div>
 </body>
 </html>
