include subject line in hyperlinks

--- a/nginx/html/custom_404.html
+++ b/nginx/html/custom_404.html
@@ -21,7 +21,7 @@
 </head>
 <body style="text-align: center;">
     <div class="alert alert-warning">
-        <p style="font-family: Arial;">The metadata entry you are looking for is no longer available. If you need assistance in finding metadata records, please contact <a style="color: #007485; font-weight: bold; text-decoration: none;" href='mailto:opendata@cyfoethnaturiolcymru.gov.uk' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a>.</p>
+        <p style="font-family: Arial;">The metadata entry you are looking for is no longer available. If you need assistance in finding metadata records, please contact <a style="color: #007485; font-weight: bold; text-decoration: none;" href='mailto:opendata@cyfoethnaturiolcymru.gov.uk?subject=Data Discovery Enquiry' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a>.</p>
     </div>
 </body>
 </html>
