--- a/nginx/html/custom_404_cym.html
+++ b/nginx/html/custom_404_cym.html
@@ -21,7 +21,7 @@
 </head>
 <body style="text-align: center;">
     <div class="alert alert-warning">
-        <p style="font-family: Arial;">Nid yw'r cofnod metadata rydych yn chwilio amdano ar gael bellach.  Os oes angen cymorth arnoch i ddod o hyd i gofnodion metadata, cysylltwch ag <a style="color: #007485; font-weight: bold; text-decoration: none;" href='mailto:opendata@cyfoethnaturiolcymru.gov.uk' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a>.</p>
+        <p style="font-family: Arial;">Nid yw'r cofnod metadata rydych yn chwilio amdano ar gael bellach.  Os oes angen cymorth arnoch i ddod o hyd i gofnodion metadata, cysylltwch ag <a style="color: #007485; font-weight: bold; text-decoration: none;" href='mailto:opendata@cyfoethnaturiolcymru.gov.uk?subject=Data Discovery Enquiry' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a>.</p>
     </div>
 </body>
 </html>
